--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -66,4 +66,5 @@ endif
 ccflags-y += -Wno-implicit-function-declaration -Wno-strict-prototypes -Wno-int-conversion -Wno-gcc-compat
 ccflags-y += -Wno-declaration-after-statement -Wno-unused-function
 
+ccflags-y += -DKSU_SUSFS
 # Keep a new line here!! Because someone may append config
